--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "firebase": "^5.3.1",
     "vue": "^2.5.16",
+    "vue-agile": "^0.3.7",
     "vue-particles": "^1.0.9",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuefire": "^2.0.0-alpha.12"
   },
   "devDependencies": {
     "@vue/cli-service": "^3.0.0-rc.9",
