--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "firebase": "^5.3.1",
+    "axios": "^0.18.0",
+    "firebase": "^5.4.1",
     "vue": "^2.5.16",
     "vue-agile": "^0.3.7",
     "vue-particles": "^1.0.9",
