--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vue-agile": "^0.3.7",
     "vue-particles": "^1.0.9",
     "vue-router": "^3.0.1",
+    "vue2-dropzone": "^3.2.2",
+    "vue2-toast": "^2.0.2",
     "vuefire": "^2.0.0-alpha.12"
   },
   "devDependencies": {
