--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cr",
+  "name": "crnew",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,21 +7,32 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@sendgrid/mail": "^6.3.1",
-    "axios": "^0.18.0",
-    "firebase": "^5.4.1",
-    "vue": "^2.5.16",
+    "firebase": "^5.7.0",
+    "vue": "^2.5.17",
     "vue-agile": "^0.3.7",
-    "vue-particles": "^1.0.9",
+    "vue-file-upload": "^0.1.12",
+    "vue-picture-input": "^2.1.6",
     "vue-router": "^3.0.1",
-    "vue2-dropzone": "^3.2.2",
+    "vue2-dropzone": "^3.5.2",
     "vue2-toast": "^2.0.2",
-    "vuefire": "^2.0.0-alpha.12"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "@vue/cli-service": "^3.0.0-rc.9",
+    "@vue/cli-plugin-babel": "^3.2.0",
+    "@vue/cli-service": "^3.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.16"
-  }
+    "vue-template-compiler": "^2.5.17"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
